fix un probleme sur lalignement de texte pour un input et retrait de lautocomplete pour lajout dune activite

--- a/PCube/src/app/components/domain/activity/activity-list/activity-list.component.css
+++ b/PCube/src/app/components/domain/activity/activity-list/activity-list.component.css
@@ -40,4 +40,5 @@
     height: 20px;
     width: 160px;
     color: black;
+    text-align: left;
 }
